--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Notes-backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/NotesApp
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#this ddl will help in creating the table.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
