--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,18 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #this ddl will help in creating the table.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#spring.security.user.name=foo
+#spring.security.user.password=foo
+
+#subham
+#123
+#subhama3650@gmail.com
+
+#foo
+#foo
+#foo123@gmail.com
+
+#gyan
+#123
+#gyan123@gmail.com
